--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -58,6 +58,13 @@ runs:
 
         # install test packages
         conda install -y pytest
+        if [ "${{ inputs.rocm }}" = "ON" ]; then
+          pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/rocm6.1
+        elif [ "${{ inputs.gpu }}" = "ON" ]; then
+          conda install -y -q pytorch pytorch-cuda=12.4 -c pytorch -c nvidia/label/cuda-12.4.0
+        else
+          conda install -y -q pytorch -c pytorch
+        fi
     - name: ROCm - Install dependencies
       if: inputs.rocm == 'ON'
       shell: bash
@@ -143,8 +150,6 @@ runs:
       if: inputs.gpu == 'ON'
       shell: bash
       run: |
-        #sudo apt-get install -y python3-pip
-        #pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/rocm6.1
         pytest --junitxml=test-results/pytest/results.xml tests/test_*.py
         pytest --junitxml=test-results/pytest/results-torch.xml tests/torch_*.py
         cp tests/common_faiss_tests.py faiss/gpu/test
