--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -58,9 +58,7 @@ runs:
 
         # install test packages
         conda install -y pytest
-        if [ "${{ inputs.rocm }}" = "ON" ]; then
-          pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/rocm6.1
-        elif [ "${{ inputs.gpu }}" = "ON" ]; then
+        if [ "${{ inputs.gpu }}" = "ON" ]; then
           conda install -y -q pytorch pytorch-cuda=12.4 -c pytorch -c nvidia/label/cuda-12.4.0
         else
           conda install -y -q pytorch -c pytorch
@@ -140,6 +138,11 @@ runs:
       working-directory: build/faiss/python
       run: |
         $CONDA/bin/python setup.py install
+    - name: ROCm - overlay torch
+      if: inputs.rocm == 'ON'
+      shell: bash
+      run: |
+        pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/rocm6.1
     - name: Python tests (CPU only)
       if: inputs.gpu == 'OFF'
       shell: bash
