try libstdcxx-ng-14.1.0-hc0a3c3a version

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -116,6 +116,7 @@ endif()
 ]=])
 endif()
 
+find_package(libstdcxx-ng EXACT 14.1.0-hc0a3c3a_0 REQUIRED)
 find_package(OpenMP REQUIRED)
 find_package(GTest CONFIG REQUIRED)
 
