--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -135,6 +135,9 @@ runs:
       run: |
         export GTEST_OUTPUT="xml:$(realpath .)/test-results/googletest/"
         make -C build test; cat /__w/faiss/faiss/build/Testing/Temporary/LastTest.log
+    - name: Setup tmate session
+      if: always()
+      uses: mxschmitt/action-tmate@v3
     - name: Install Python extension
       shell: bash
       working-directory: build/faiss/python
