--- a/faiss/gpu/test/CMakeLists.txt
+++ b/faiss/gpu/test/CMakeLists.txt
@@ -38,15 +38,15 @@ macro(faiss_gpu_test file)
 endmacro()
 
 
-faiss_gpu_test(TestCodePacking.cpp)
-faiss_gpu_test(TestGpuIndexFlat.cpp)
-faiss_gpu_test(TestGpuIndexIVFFlat.cpp)
-faiss_gpu_test(TestGpuIndexBinaryFlat.cpp)
-faiss_gpu_test(TestGpuMemoryException.cpp)
+#faiss_gpu_test(TestCodePacking.cpp)
+#faiss_gpu_test(TestGpuIndexFlat.cpp)
+#faiss_gpu_test(TestGpuIndexIVFFlat.cpp)
+#faiss_gpu_test(TestGpuIndexBinaryFlat.cpp)
+#faiss_gpu_test(TestGpuMemoryException.cpp)
 faiss_gpu_test(TestGpuIndexIVFPQ.cpp)
-faiss_gpu_test(TestGpuIndexIVFScalarQuantizer.cpp)
-faiss_gpu_test(TestGpuDistance.${GPU_EXT_PREFIX})
-faiss_gpu_test(TestGpuSelect.${GPU_EXT_PREFIX})
+#faiss_gpu_test(TestGpuIndexIVFScalarQuantizer.cpp)
+#faiss_gpu_test(TestGpuDistance.${GPU_EXT_PREFIX})
+#faiss_gpu_test(TestGpuSelect.${GPU_EXT_PREFIX})
 
 if(FAISS_ENABLE_RAFT)
   faiss_gpu_test(TestGpuIndexCagra.cu)
