--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,6 +70,7 @@ jobs:
           opt_level: avx512
   linux-x86_64-GPU-cmake:
     name: Linux x86_64 GPU (cmake)
+    if: false
     runs-on: 4-core-ubuntu-gpu-t4
     steps:
       - name: Checkout
