sconditionally fndinng raft

--- a/faiss/python/CMakeLists.txt
+++ b/faiss/python/CMakeLists.txt
@@ -175,7 +175,8 @@ if(FAISS_ENABLE_GPU)
     find_package(CUDAToolkit REQUIRED)
     if(FAISS_ENABLE_CUVS)
       find_package(cuvs)
-      find_package(raft)
+      if(FAISS_ENABLE_RAFT AND NOT TARGET raft::raft)
+        find_package(raft)
     endif()
     target_link_libraries(swigfaiss PRIVATE CUDA::cudart $<$<BOOL:${FAISS_ENABLE_CUVS}>:cuvs::cuvs> $<$<BOOL:${FAISS_ENABLE_CUVS}>:raft::raft>)
     target_link_libraries(swigfaiss_avx2 PRIVATE CUDA::cudart $<$<BOOL:${FAISS_ENABLE_CUVS}>:cuvs::cuvs> $<$<BOOL:${FAISS_ENABLE_CUVS}>:raft::raft>)
