--- a/perf_tests/CMakeLists.txt
+++ b/perf_tests/CMakeLists.txt
@@ -87,57 +87,9 @@ set(FAISS_PERF_TEST_SRC
   bench_scalar_quantizer_encode.cpp
 )
 foreach(bench ${FAISS_PERF_TEST_SRC})
-    get_filename_component(bench_exec ${bench} NAME_WE)
-
+  get_filename_component(bench_exec ${bench} NAME_WE)
   add_executable(${bench_exec} ${bench})
-
-  if(NOT FAISS_OPT_LEVEL STREQUAL "avx2" AND NOT FAISS_OPT_LEVEL STREQUAL "avx512" AND NOT FAISS_OPT_LEVEL STREQUAL "sve")
-    target_link_libraries(${bench_exec} PRIVATE faiss)
-  endif()
-
-  if(FAISS_OPT_LEVEL STREQUAL "avx2")
-    if(NOT WIN32)
-      target_compile_options(${bench_exec} PRIVATE $<$<COMPILE_LANGUAGE:CXX>:-mavx2 -mfma>)
-    else()
-      target_compile_options(${bench_exec} PRIVATE $<$<COMPILE_LANGUAGE:CXX>:/arch:AVX2>)
-    endif()
-    target_link_libraries(${bench_exec} PRIVATE faiss_avx2)
-  endif()
-
-  if(FAISS_OPT_LEVEL STREQUAL "avx512")
-    if(NOT WIN32)
-      target_compile_options(${bench_exec} PRIVATE $<$<COMPILE_LANGUAGE:CXX>:-mavx2 -mfma -mavx512f -mavx512f -mavx512cd -mavx512vl -mavx512dq -mavx512bw>)
-    else()
-      target_compile_options(${bench_exec} PRIVATE $<$<COMPILE_LANGUAGE:CXX>:/arch:AVX512>)
-    endif()
-    target_link_libraries(${bench_exec} PRIVATE faiss_avx512)
-  endif()
-
-  if(FAISS_OPT_LEVEL STREQUAL "sve")
-    if(NOT WIN32)
-      if("${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_DEBUG} " MATCHES "(^| )-march=native")
-        # Do nothing, expect SVE to be enabled by -march=native
-      elseif("${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_DEBUG} " MATCHES "(^| )(-march=armv[0-9]+(\\.[1-9]+)?-[^+ ](\\+[^+$ ]+)*)")
-        # Add +sve
-        target_compile_options(${bench_exec} PRIVATE $<$<AND:$<COMPILE_LANGUAGE:CXX>,$<CONFIG:DEBUG>>:${CMAKE_MATCH_2}+sve>)
-      elseif(NOT "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_DEBUG} " MATCHES "(^| )-march=armv")
-        # No valid -march, so specify -march=armv8-a+sve as the default
-        target_compile_options(${bench_exec} PRIVATE $<$<AND:$<COMPILE_LANGUAGE:CXX>,$<CONFIG:DEBUG>>:-march=armv8-a+sve>)
-      endif()
-      if("${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE} " MATCHES "(^| )-march=native")
-        # Do nothing, expect SVE to be enabled by -march=native
-      elseif("${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE} " MATCHES "(^| )(-march=armv[0-9]+(\\.[1-9]+)?-[^+ ](\\+[^+$ ]+)*)")
-        # Add +sve
-        target_compile_options(${bench_exec} PRIVATE $<$<AND:$<COMPILE_LANGUAGE:CXX>,$<CONFIG:RELEASE>>:${CMAKE_MATCH_2}+sve>)
-      elseif(NOT "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE} " MATCHES "(^| )-march=armv")
-        # No valid -march, so specify -march=armv8-a+sve as the default
-        target_compile_options(${bench_exec} PRIVATE $<$<AND:$<COMPILE_LANGUAGE:CXX>,$<CONFIG:RELEASE>>:-march=armv8-a+sve>)
-      endif()
-    else()
-      # TODO: support Windows
-    endif()
-    target_link_libraries(${bench_exec} PRIVATE faiss_sve)
-  endif()
+  link_to_faiss_lib(${bench_exec})
   target_link_libraries(${bench_exec} PRIVATE faiss_perf_tests_utils OpenMP::OpenMP_CXX benchmark::benchmark gflags)
   # `#include <faiss/perf_tests/utils.h>` or any other headers
   target_include_directories(${bench_exec} PRIVATE
