--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -16,6 +16,10 @@ inputs:
     description: 'Enable ROCm support.'
     required: false
     default: OFF
+  dnnl:
+    description: 'Enable DNNL support.'
+    required: false
+    default: OFF
 runs:
   using: composite
   steps:
@@ -60,6 +64,11 @@ runs:
         # and CUDA from RAFT channel for RAFT builds
         elif [ "${{ inputs.raft }}" = "ON" ]; then
           conda install -y -q libraft cuda-version=12.4 cuda-toolkit -c rapidsai-nightly -c "nvidia/label/cuda-12.4.0" -c conda-forge
+        fi
+
+        # install DNNL package
+        if [ "${{ inputs.dnnl }}" = "ON" ]; then
+          conda install -y -q conda-forge::onednn
         fi
 
         # install test packages
@@ -131,6 +140,7 @@ runs:
               -DFAISS_ENABLE_RAFT=${{ inputs.raft }} \
               -DFAISS_ENABLE_ROCM=${{ inputs.rocm }} \
               -DFAISS_OPT_LEVEL=${{ inputs.opt_level }} \
+              -DFAISS_ENABLE_DNNL=${{ inputs.dnnl }} \
               -DFAISS_ENABLE_C_API=ON \
               -DPYTHON_EXECUTABLE=$CONDA/bin/python \
               -DCMAKE_BUILD_TYPE=Release \
