remove perf_tests from compilation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,7 +110,7 @@ add_subdirectory(tutorial/cpp)
 include(CTest)
 if(BUILD_TESTING)
   add_subdirectory(tests)
-  add_subdirectory(perf_tests)
+  # add_subdirectory(perf_tests)
   if(FAISS_ENABLE_GPU)
     if(FAISS_ENABLE_ROCM)
       add_subdirectory(faiss/gpu-rocm/test)
