debug: remove dep

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -115,7 +115,7 @@ jobs:
           rocm: ON
   linux-arm64-SVE-cmake:
     name: Linux arm64 SVE (cmake)
-    needs: linux-x86_64-cmake
+    # needs: linux-x86_64-cmake
     runs-on: faiss-aws-r8g.large
     steps:
       - name: Checkout
