--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -110,7 +110,7 @@ runs:
       shell: bash
       run: |
         # symblink system libraries for HIP compiler
-        sudo apt-get install -y glibc=2.31
+        sudo apt-get install -y libc6=2.31
         sudo ln -s /lib/x86_64-linux-gnu/libc.so.6 /lib64/libc.so.6
         sudo ln -s /lib/x86_64-linux-gnu/libc_nonshared.a /usr/lib64/libc_nonshared.a
         sudo ln -s /usr/lib/x86_64-linux-gnu/libpthread.so.0 /lib64/libpthread.so.0
