Try using CMake 3.29

--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -32,19 +32,18 @@ runs:
         conda update -y -q conda
         echo "$CONDA/bin" >> $GITHUB_PATH
 
-        conda install -y -q python=3.11 make swig numpy scipy pytest gflags
+        conda install -y -q python=3.11 make swig numpy scipy pytest gflags cmake=3.29
 
-        apt-cache show libc6
-        sudo apt-get update
-        sudo apt-get install libssl-dev
-        mkdir /tmp/cmake-build
-        pushd /tmp/cmake-build
-        git clone -b v3.30.5 https://gitlab.kitware.com/cmake/cmake.git
-        mkdir cmake/build
-        cd cmake/build
-        ../bootstrap -- -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH="$CONDA_PREFIX"
-        make -j8
-        popd
+#       apt-cache show libc6 #       sudo apt-get update
+#       sudo apt-get install libssl-dev
+#       mkdir /tmp/cmake-build
+#       pushd /tmp/cmake-build
+#       git clone -b v3.30.5 https://gitlab.kitware.com/cmake/cmake.git
+#       mkdir cmake/build
+#       cd cmake/build
+#       ../bootstrap -- -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH="$CONDA_PREFIX"
+#       make -j8
+#       popd
 
         # install base packages for ARM64
         if [ "${{ runner.arch }}" = "ARM64" ]; then
@@ -127,7 +126,7 @@ runs:
       run: |
         eval "$(conda shell.bash hook)"
         conda activate
-        export PATH="/tmp/cmake-build/cmake/build/bin:$PATH"
+#       export PATH="/tmp/cmake-build/cmake/build/bin:$PATH"
         cmake -B build \
               -DBUILD_TESTING=ON \
               -DBUILD_SHARED_LIBS=ON \
