--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -34,7 +34,8 @@ runs:
 
         conda install -y -q python=3.11 cmake=3.29.0 make swig numpy scipy pytest gflags
 
-#       apt-cache show libc6 #       sudo apt-get update
+#       apt-cache show libc6
+#       sudo apt-get update
 #       sudo apt-get install libssl-dev
 #       mkdir /tmp/cmake-build
 #       pushd /tmp/cmake-build
